syntax = "proto3";

package io.typestream.grpc;

option java_package = "io.typestream.grpc.connection_service";

option go_package = "github.com/typestreamio/typestream/cli/pkg/connection_service";

import "google/protobuf/timestamp.proto";

service ConnectionService {
    // Register a database connection for monitoring
    rpc RegisterConnection(RegisterConnectionRequest) returns (RegisterConnectionResponse) {}

    // Unregister a connection (stop monitoring)
    rpc UnregisterConnection(UnregisterConnectionRequest) returns (UnregisterConnectionResponse) {}

    // Get current status of all monitored connections
    rpc GetConnectionStatuses(GetConnectionStatusesRequest) returns (GetConnectionStatusesResponse) {}

    // Test a connection immediately (one-shot, doesn't register)
    rpc TestConnection(TestConnectionRequest) returns (TestConnectionResponse) {}

    // Create a JDBC sink connector using a registered connection
    // Server resolves credentials from connection ID - credentials never sent to UI
    rpc CreateJdbcSinkConnector(CreateJdbcSinkConnectorRequest) returns (CreateJdbcSinkConnectorResponse) {}

    // Weaviate connection management
    rpc RegisterWeaviateConnection(RegisterWeaviateConnectionRequest) returns (RegisterWeaviateConnectionResponse) {}
    rpc GetWeaviateConnectionStatuses(GetWeaviateConnectionStatusesRequest) returns (GetWeaviateConnectionStatusesResponse) {}
    rpc CreateWeaviateSinkConnector(CreateWeaviateSinkConnectorRequest) returns (CreateWeaviateSinkConnectorResponse) {}

    // Elasticsearch connection management
    rpc RegisterElasticsearchConnection(RegisterElasticsearchConnectionRequest) returns (RegisterElasticsearchConnectionResponse) {}
    rpc GetElasticsearchConnectionStatuses(GetElasticsearchConnectionStatusesRequest) returns (GetElasticsearchConnectionStatusesResponse) {}
    rpc CreateElasticsearchSinkConnector(CreateElasticsearchSinkConnectorRequest) returns (CreateElasticsearchSinkConnectorResponse) {}
}

// Database connection configuration
message DatabaseConnectionConfig {
    string id = 1;
    string name = 2;
    DatabaseType database_type = 3;
    string hostname = 4;              // Hostname for server health checks (e.g., "localhost")
    int32 port = 5;
    string database = 6;
    string username = 7;
    string password = 8;
    string connector_hostname = 9;    // Hostname for Kafka Connect connectors (e.g., "postgres" in Docker)
}

enum DatabaseType {
    DATABASE_TYPE_UNSPECIFIED = 0;
    POSTGRES = 1;
    MYSQL = 2;
}

// Connection status (excludes credentials - credentials stay server-side)
message ConnectionStatus {
    string id = 1;
    string name = 2;
    ConnectionState state = 3;
    string error = 4;
    google.protobuf.Timestamp last_checked = 5;
    DatabaseConnectionConfigPublic config = 6;  // Public config (no password)
}

enum ConnectionState {
    CONNECTION_STATE_UNSPECIFIED = 0;
    CONNECTED = 1;
    DISCONNECTED = 2;
    ERROR = 3;
    CONNECTING = 4;
}

// Register connection for monitoring
message RegisterConnectionRequest {
    DatabaseConnectionConfig connection = 1;
}

message RegisterConnectionResponse {
    bool success = 1;
    string error = 2;
    ConnectionStatus status = 3;
}

// Unregister connection
message UnregisterConnectionRequest {
    string connection_id = 1;
}

message UnregisterConnectionResponse {
    bool success = 1;
    string error = 2;
}

// Get all connection statuses
message GetConnectionStatusesRequest {}

message GetConnectionStatusesResponse {
    repeated ConnectionStatus statuses = 1;
}

// Test a connection one-shot
message TestConnectionRequest {
    DatabaseConnectionConfig connection = 1;
}

message TestConnectionResponse {
    bool success = 1;
    string error = 2;
    int64 latency_ms = 3;
}

// Create JDBC sink connector (server-side credential resolution)
message CreateJdbcSinkConnectorRequest {
    string connection_id = 1;      // ID of registered connection (server looks up credentials)
    string connector_name = 2;     // Name for the Kafka Connect connector
    string topics = 3;             // Topic(s) to consume from
    string table_name = 4;         // Target database table
    string insert_mode = 5;        // insert, upsert, or update
    string primary_key_fields = 6; // Comma-separated list of primary key fields (for upsert/update)
}

message CreateJdbcSinkConnectorResponse {
    bool success = 1;
    string error = 2;
    string connector_name = 3;     // Name of created connector
}

// Public connection config (excludes sensitive fields like password)
message DatabaseConnectionConfigPublic {
    string id = 1;
    string name = 2;
    DatabaseType database_type = 3;
    string hostname = 4;
    int32 port = 5;
    string database = 6;
    string username = 7;
    // password intentionally excluded
    string connector_hostname = 8;
}

// Weaviate connection configuration
message WeaviateConnectionConfig {
    string id = 1;
    string name = 2;
    string rest_url = 3;              // e.g., "http://localhost:8090"
    string grpc_url = 4;              // e.g., "localhost:50051"
    bool grpc_secured = 5;
    string auth_scheme = 6;           // "NONE" or "API_KEY"
    string api_key = 7;               // For Weaviate Cloud (server-side only)
    string connector_rest_url = 8;    // For Kafka Connect (e.g., "http://weaviate:8080")
    string connector_grpc_url = 9;    // For Kafka Connect (e.g., "weaviate:50051")
}

message WeaviateConnectionConfigPublic {
    string id = 1;
    string name = 2;
    string rest_url = 3;
    string grpc_url = 4;
    bool grpc_secured = 5;
    string auth_scheme = 6;
    // api_key intentionally excluded
    string connector_rest_url = 7;
    string connector_grpc_url = 8;
}

message WeaviateConnectionStatus {
    string id = 1;
    string name = 2;
    ConnectionState state = 3;
    string error = 4;
    google.protobuf.Timestamp last_checked = 5;
    WeaviateConnectionConfigPublic config = 6;
}

// Register Weaviate connection for monitoring
message RegisterWeaviateConnectionRequest {
    WeaviateConnectionConfig connection = 1;
}

message RegisterWeaviateConnectionResponse {
    bool success = 1;
    string error = 2;
    WeaviateConnectionStatus status = 3;
}

// Get all Weaviate connection statuses
message GetWeaviateConnectionStatusesRequest {}

message GetWeaviateConnectionStatusesResponse {
    repeated WeaviateConnectionStatus statuses = 1;
}

// Create Weaviate sink connector
message CreateWeaviateSinkConnectorRequest {
    string connection_id = 1;
    string connector_name = 2;
    string topics = 3;
    string collection_name = 4;
    string document_id_strategy = 5;  // NoIdStrategy, KafkaIdStrategy, FieldIdStrategy
    string document_id_field = 6;
    string vector_strategy = 7;       // NoVectorStrategy, FieldVectorStrategy
    string vector_field = 8;
    string timestamp_field = 9;       // Optional: field name for timestamp conversion (empty = no transform)
}

message CreateWeaviateSinkConnectorResponse {
    bool success = 1;
    string error = 2;
    string connector_name = 3;
}

// Elasticsearch connection configuration
message ElasticsearchConnectionConfig {
    string id = 1;
    string name = 2;
    string connection_url = 3;        // e.g., "http://localhost:9200"
    string username = 4;              // Optional: for authentication
    string password = 5;              // Optional: for authentication
    string connector_url = 6;         // For Kafka Connect (e.g., "http://elasticsearch:9200")
}

message ElasticsearchConnectionConfigPublic {
    string id = 1;
    string name = 2;
    string connection_url = 3;
    string username = 4;
    // password intentionally excluded
    string connector_url = 5;
}

message ElasticsearchConnectionStatus {
    string id = 1;
    string name = 2;
    ConnectionState state = 3;
    string error = 4;
    google.protobuf.Timestamp last_checked = 5;
    ElasticsearchConnectionConfigPublic config = 6;
}

// Register Elasticsearch connection for monitoring
message RegisterElasticsearchConnectionRequest {
    ElasticsearchConnectionConfig connection = 1;
}

message RegisterElasticsearchConnectionResponse {
    bool success = 1;
    string error = 2;
    ElasticsearchConnectionStatus status = 3;
}

// Get all Elasticsearch connection statuses
message GetElasticsearchConnectionStatusesRequest {}

message GetElasticsearchConnectionStatusesResponse {
    repeated ElasticsearchConnectionStatus statuses = 1;
}

// Create Elasticsearch sink connector
message CreateElasticsearchSinkConnectorRequest {
    string connection_id = 1;
    string connector_name = 2;
    string topics = 3;
    string index_name = 4;
    string document_id_strategy = 5;    // RECORD_KEY, TOPIC_PARTITION_OFFSET
    string write_method = 6;            // INSERT, UPSERT
    string behavior_on_null_values = 7; // IGNORE, DELETE, FAIL
}

message CreateElasticsearchSinkConnectorResponse {
    bool success = 1;
    string error = 2;
    string connector_name = 3;
}
